--- a/catalog.html
+++ b/catalog.html
@@ -2,67 +2,101 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/fonts.css">
+  	<link rel="stylesheet" href="css/normalize.css">
+  	<link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-	<header>
-			<a href="index.html" aria-label="На главную страницу">
-				<img src="img/logo-device.svg" alt="Логотип компании Device" width="163px" height="35px">
-			</a>
+	<header class="header">
+		<a class="logo" href="index.html" aria-label="На главную страницу">
+			<img src="img/logo-device.svg" alt="Логотип компании Device" width="163px" height="35px">
+		</a>
 
-			<form action="echo.htmlacademy.ru" method="get" aria-label="Поисковая строка">
-					<input type="search" placeholder="Поиск по сайту" aria-label="Поле для поиска">
-					<button type="submit" aria-label="Поиск">Поиск</button>
-			</form>
+		<form action="echo.htmlacademy.ru" method="get" aria-label="Поисковая строка">
+			<input  type="search" placeholder="Поиск по сайту" aria-label="Поле для поиска">
+
+			<button class="send-search" type="submit" aria-label="Поиск">
+				<span class="description-send-search">
+					Найти
+				</span>
+			</button>
+		</form>
 			
-				<a href="#" aria-label="Войти в личный кабинет">
-					Войти
-				</a>
+		<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Войти в личный кабинет">
+			Войти
+		</a>
 
-				<a href="#" aria-label="Сравнить товары">
-					Сравнить
-				</a>
+		<a class="a-link-hover a-link-focus a-link-active"  href="#" aria-label="Сравнить товары">
+			Сравнить
+		</a>
 
-				<a href="#" aria-label="Корзина">
-					Корзина
-				</a>
-		<nav>
+		<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Корзина">
+			Корзина
+		</a>
+
+		<nav class="nav-main">
 			<ul>
 				<li>
-					<a href="#" aria-label="Каталог товаров">
+					<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Каталог товаров">
 						Каталог товаров	
 					</a>
 
-					<ul class="visually-hidden">						
-						<li><a href="#" aria-label="Виртуальная реальность">Виртуальная реальность</a></li>
-						<li><a href="#" aria-label="Фитнес-браслеты">Фитнес-браслеты</a></li>
-						<li><a href="#" aria-label="Квадрокоптер">Квадрокоптер</a></li>
-						<li><a href="#" aria-label="Моноподы для селфи">Моноподы для селфи</a></li>
-						<li><a href="#" aria-label="Умные часы">Умные часы</a></li>
-						<li><a href="#" aria-label="Экшн камеры">Экшн камеры</a></li>
+					<ul class="visually-hidden categories-menu">						
+						<li>
+							<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Виртуальная реальность">
+								Виртуальная реальность
+							</a>
+						</li>
+						<li>
+							<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Фитнес-браслеты">
+								Фитнес-браслеты
+							</a>
+						</li>
+						<li>
+							<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Квадрокоптер">
+								Квадрокоптер
+							</a>
+						</li>
+						<li>
+							<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Моноподы для селфи">
+								Моноподы для селфи
+							</a>
+						</li>
+						<li>
+							<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Умные часы">
+								Умные часы
+							</a>
+						</li>
+						<li>
+							<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Экшн камеры">
+								Экшн камеры
+							</a>
+						</li>
 					</ul>		
 				</li>
 
 				<li>
-					<a href="#" aria-label="Доставка">
+					<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Доставка">
 						Доставка
 					</a>
 				</li>
 
 				<li>
-					<a href="#" aria-label="Гарантия">
+					<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Гарантия">
 						Гарантия
 					</a>
 				</li>
 
 				<li>
-					<a href="#" aria-label="Контакты">
+					<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Контакты">
 						Контакты
 					</a>
 				</li>
 			</ul>
 		</nav>
 	</header>
+
 
 	<main>
 		<h1 class="visually-hidden">
@@ -74,21 +108,21 @@
 				Моноподы для селфи
 			</h2>
 
-			<ul>
+			<ul class="bread-crumbs">
 				<li>
-					<a href="index.html" aria-label="На главную страницу">
+					<a class="bread-crumbs-link" href="index.html" aria-label="На главную страницу">
 						Главная
 					</a>
 				</li>
 
 				<li>
-					<a href="#" aria-label="Каталог товаров">
+					<a class="bread-crumbs-link" href="#" aria-label="Каталог товаров">
 						Каталог товаров
 					</a>
 				</li>
 
 				<li>
-					<a href="catalog.html" aria-label="Моноподы для селфи">
+					<a class="bread-crumbs-link" href="catalog.html" aria-label="Моноподы для селфи">
 						Моноподы для селфи
 					</a>
 				</li>
@@ -102,65 +136,65 @@
 				</h4>
 
 				<fieldset>
-					<legend>
+					<legend class="filter-title">
 						Стоимость
 					</legend>
 
 					<label for="price-change">
-						0
+						<span class="range-filter-text">от 0</span>
 					<input type="range" min="1" max="5000" step="1" id="price-change" aria-label="Фильтр цены">
-						5000
+						<span class="filter-range-text">до 5000</span>
 					</label>
 				</fieldset>
 				
 				<fieldset>
-					<legend>
+					<legend class="filter-title">
 						Цвет
 					</legend>
 
-					<ul>
+					<ul class="filter-text">
 						<li>
 							<label>
-								Черный
-									<input type="checkbox" name="black" aria-label="Черный" checked>
+								<input type="checkbox" name="black" aria-label="Черный" checked>
+								Чёрный
 							</label>
 						</li>
 						<li>
 							<label>
+								<input type="checkbox" name="white" aria-label="Белый">
 								Белый
-									<input type="checkbox" name="white" aria-label="Белый">
 							</label>
 						</li>
 						<li>
 							<label>
+								<input type="checkbox" name="blue" aria-label="Синий" checked>
 								Синий
-									<input type="checkbox" name="blue" aria-label="Синий" checked>
 							</label>
 						</li>
 						<li>
 							<label>
+								<input type="checkbox" name="red" aria-label="Красный" checked>
 								Красный
-									<input type="checkbox" name="red" aria-label="Красный" checked>
 							</label>
 						</li>												
 						<li>
 							<label>
+								<input type="checkbox" name="pink" aria-label="Розовый">
 								Розовый
-									<input type="checkbox" name="pink" aria-label="Розовый">
 							</label>
 						</li>
 					</ul>
 				</fieldset>
 
 				<fieldset>
-					<legend>Bluetooth</legend>
+					<legend class="filter-title">Bluetooth</legend>
 					<ul>
-					<li><label>Есть<input type="radio" name="bluetooth" value="yes"></label></li>
-					<li><label>Нет<input type="radio" name="bluetooth" value="no"></label></li>
+					<li><input type="radio" name="bluetooth" value="yes"><label>Есть</label></li>
+					<li><input type="radio" name="bluetooth" value="no"><label>Нет</label></li>
 					</ul>
 				</fieldset>
 
-				<button type="submit">Показать</button>
+				<button class="button-type-slider"  type="submit">Показать</button>
 			</form>
 		</section>
 
@@ -169,28 +203,28 @@
 				Сортировка:
 			</h4>
 
-			<ul>
-				<li><a href="#" aria-label="Сортировка по цене">По цене</a></li>
-				<li><a href="#" aria-label="Сортировка по типу товара">По типу</a></li>
-				<li><a href="#" aria-label="Сортировка по популярности">По популярности</a></li>
-				<li><a href="#" aria-label="От меньшего к большему"></a></li>
-				<li><a href="#" aria-label="От большего к меньшему"></a></li>			
+			<ul class="sorting-catalog">
+				<li><a class="list-sorting-link" href="#" aria-label="Сортировка по цене">По цене</a></li>
+				<li><a class="list-sorting-link" href="#" aria-label="Сортировка по типу товара">По типу</a></li>
+				<li><a class="list-sorting-link" href="#" aria-label="Сортировка по популярности">По популярности</a></li>
+				<li><a class="list-sorting-link" href="#" aria-label="От меньшего к большему"></a></li>
+				<li><a class="list-sorting-link" href="#" aria-label="От большего к меньшему"></a></li>			
 			</ul>
 		</section>
 
 		<div>
 			<img src="img/item1.jpg" alt="Любительская селфи-палка" width="360px" height="380px">
-			<h4>
-				<a href="#!">
-					Любительская селфи-палка <span>500 руб.</span>
+			<p class="name-card">
+				<a class="name-card-link" href="#!">
+					Любительская селфи-палка <span class="name-card-price">500 руб.</span>
 				</a>
-			</h4>
+			</p>
 
 			<div class="visually-hidden">
-				<a href="#" aria-label="Добавить товар в корзину">
+				<a class="button-type-slider"  href="#" aria-label="Добавить товар в корзину">
 					В корзину
 				</a>
-				<a href="#" aria-label="Добавить товар для сравнения">
+				<a class="link-add" href="#" aria-label="Добавить товар для сравнения">
 					Добавить к сравнению
 				</a>
 			</div>
@@ -198,17 +232,17 @@
 
 		<div>
 			<img src="img/item2.jpg" alt="Профессиональная селфи-палка" width="360px" height="380px">
-			<h4>
-				<a href="#!">
-					Профессиональная селфи-палка <span>1500 руб.</span>
+			<p class="name-card">
+				<a class="name-card-link" href="#!">
+					Профессиональная селфи-палка <span class="name-card-price">1500 руб.</span>
 				</a>
-			</h4>
+			</p>
 
 			<div class="visually-hidden">
-				<a href="#" aria-label="Добавить товар в корзину">
+				<a class="button-type-slider"  href="#" aria-label="Добавить товар в корзину">
 					В корзину
 				</a>
-				<a href="#" aria-label="Добавить товар для сравнения">
+				<a class="link-add" href="#" aria-label="Добавить товар для сравнения">
 					Добавить к сравнению
 				</a>
 			</div>
@@ -216,17 +250,17 @@
 
 		<div>
 			<img src="img/item3.jpg" alt="Непотопляемая селфи-палка" width="360px" height="380px">
-			<h4>
-				<a href="#!">
-					Непотопляемая селфи-палка <span>2500 руб.</span>
+			<p class="name-card">
+				<a class="name-card-link" href="#!">
+					Непотопляемая селфи-палка <span class="name-card-price">2500 руб.</span>
 				</a>
-			</h4>
+			</p>
 
 			<div class="visually-hidden">
-				<a href="#" aria-label="Добавить товар в корзину">
+				<a class="button-type-slider"  href="#" aria-label="Добавить товар в корзину">
 					В корзину
 				</a>
-				<a href="#" aria-label="Добавить товар для сравнения">
+				<a class="link-add" href="#" aria-label="Добавить товар для сравнения">
 					Добавить к сравнению
 				</a>
 			</div>
@@ -234,24 +268,24 @@
 
 		<div>
 			<img src="img/item4.jpg" alt="Селфи-палка Следуй за мной" width="360px" height="380px">
-			<h4>
-				<a href="#!">
-					Селфи-палка "Следуй за мной" <span>4900 руб.</span>
+			<p class="name-card">
+				<a class="name-card-link" href="#!">
+					Селфи-палка "Следуй за мной" <span class="name-card-price">4900 руб.</span>
 				</a>
-			</h4>
+			</p>
 
 			<div class="visually-hidden">
-				<a href="#" aria-label="Добавить товар в корзину">
+				<a class="button-type-slider"  href="#" aria-label="Добавить товар в корзину">
 					В корзину
 				</a>
-				<a href="#" aria-label="Добавить товар для сравнения">
+				<a class="link-add" href="#" aria-label="Добавить товар для сравнения">
 					Добавить к сравнению
 				</a>
 			</div>
 		</div>
 
 		<div>
-			<ul>
+			<ul class="nav-catalog">
 				<li>
 					<a href="#" aria-label="На предыдущую страницу каталога">
 						 Назад
@@ -284,13 +318,14 @@
 			</ul>
 		</div>
 	</main>
-	<footer>
+
+	<footer class="footer">
 		<div>
-			<a href="index.html" aria-label="На главную страницу">
-				<img src="img/logo-device.svg" alt="Логотип компании Device" width="163px" height="35px">
+			<a class="logo" href="index.html" aria-label="На главную страницу">
+				<img src="img/logo-footer-yellow.svg" alt="Логотип компании Device" width="163px" height="35px">
 			</a>
 
-			<address>
+			<address class="address">
 				г. Москва, ул. Строителей, 15
 			</address>
 		</div>
@@ -298,20 +333,20 @@
 		<div>
 			<ul>
 				<li>
-					<a href="#" aria-label="Доставка">
-						Доставка		
+					<a class="a-link-hover a-link-active a-link-focus" href="#" aria-label="Доставка">
+						<span class="nav-list-footer">Доставка</span>	
 					</a>
 				</li>
 
 				<li>
-					<a href="#" aria-label="Гарантия">
-						Гарантия
+					<a class="a-link-hover a-link-active a-link-focus" href="#" aria-label="Гарантия">
+						<span class="nav-list-footer">Гарантия</span>
 					</a>
 				</li>
 
 				<li>
-					<a href="#" aria-label="Контакты">
-						Контакты
+					<a class="a-link-hover a-link-active a-link-focus" href="#" aria-label="Контакты">
+						<span class="nav-list-footer">Контакты</span>
 					</a>
 				</li>
 			</ul>
@@ -324,7 +359,7 @@
 				</li>
 
 				<li>
-					<a href="#" aria-label="Instagram">
+					<a class="nav-footer" href="#" aria-label="Instagram">
 						Instagram
 					</a>
 				</li>
@@ -338,23 +373,23 @@
 		</div>
 
 		<div>
-			<a href="#" aria-label="Войти в личный кабинет">
-				Войти
+			<a class="a-link-hover a-link-active a-link-focus" href="#" aria-label="Войти в личный кабинет">
+				<span class="footer-text-nav">Войти</span>
 			</a>
 
-			<a href="#" aria-label="Сравнить товары">
-				Сравнить
+			<a class="a-link-hover a-link-active a-link-focus" href="#" aria-label="Сравнить товары">
+				<span class="footer-text-nav">Сравнить</span>
 			</a>	
 
-			<a href="#" aria-label="Корзина">
-				Корзина
+			<a class="a-link-hover a-link-active a-link-focus" href="#" aria-label="Корзина">
+				<span class="footer-text-nav">Корзина</span>
 			</a>
 
-			<a href="tel:+74954959595" aria-label="Позвонить нам">
+			<a class="a-phone a-link-hover a-link-active a-link-focus" href="tel:+74954959595" aria-label="Позвонить нам">
 				+7 (495) 495-95-95
 			</a>
 
-			<a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Курсы от Html Academy">
+			<a class="a-link-hover a-link-active a-link-focus" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Курсы от Html Academy">
 				<img src="img/logo-html.svg" alt="Логотип Html Academy" width="27px" height="34px">
 			</a>
 		</div>
